[tool.poetry]
name = "compone-development"
version = "0.1.0"
description = "Monoproject for development of all compone projects"
authors = ["György Kiss <gyorgy@duck.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

compone = { path = "./core", develop = true }
compone-stories = { path = "./stories", develop = true }
compone-cli = { path = "./cli", develop = true }
compone-ssg = { path = "./ssg", develop = true }
compone-preline = { path = "./frameworks/preline-ui", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-sugar = "*"
pytest-icdiff = "*"
tox = "^4"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "F",   # pyflakes
    "W",   # pycodestyle warning like tab-indentation, trailing-whitespace
    "C90", # mccabe code complexity
    "I",   # isort
]
ignore = [
    "E731", # Do not assign a lambda expression, use a def
]
mccabe = { max-complexity = 5 }
per-file-ignores = { "__init__.py" = ["F401"] }
