[project]
name = "compone-cli"
version = "0.1.0"
description = "CLI interface for Compone"
license = "MIT"
authors = [{ name = "György Kiss", email = "gyorgy@duck.com" }]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1.8", "compone>=0.4.0", "lxml>=5.3.0"]

[project.scripts]
compone = "compone_cli.cli:main"
