[tool.poetry]
name = "compone"
version = "0.2.0"
description = "Component framework for Python"
authors = ["György Kiss <gyorgy@duck.com>"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [{ include = "compone" }]

[tool.poetry.dependencies]
python = "^3.8"
markupsafe = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
