[project]
name = "compone"
version = "0.4.0"
description = "Component framework for Python"
license.text = "MIT"
readme = "README.md"
authors = [{ name = "György Kiss", email = "gyorgy@duck.com" }]
requires-python = ">=3.10"
dependencies = ["markupsafe>=3"]

[tool.pytest.ini_options]
addopts = "--benchmark-disable"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jinja2>=3.1.5",
    "pytest-benchmark>=4.0.0",
]
