[project]
name = "compone-ssg"
version = "0.1.0"
description = "Static Site Generator from compone Components"
license = "MIT"
authors = [{ name = "György Kiss", email = "gyorgy@duck.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "compone>=0.4.0",
    "markdown>=3.7",
    "pyyaml>=6.0.2",
]

[project.entry-points.'compone.cli']
ssg = "compone_ssg.cli:ssg"
