[tool.poetry]
name = "compone-stories"
version = "0.1.0"
description = "Storybook for Compone"
authors = ["György Kiss <kissgyorgy@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
starlette = "^0.37.2"
hypercorn = "^0.16.0"
watchfiles = "^0.21.0"

[tool.poetry.plugins."compone.cli"]
stories = "compone_stories.cli:stories"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
